2005-03-25  Albert Chu  <chu11@llnl.gov>

	* src/libcommon/wrappers.h, src/libcommon/wrappers.c
	(Gethostbyname, Inet_ntop, wrap_gethostbyname, wrap_inet_ntop):
	New macros and functions.

	* src/cerebrod/cerebrod_config_gendersllnl.c
	(gendersllnl_config_load_default): Add altname support.

	* src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c
	(cerebrod_config_cleanup): New function.

	* src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c
	(cerebrod_config): Rename to cerebrod_config_setup.

	* src/cerebrod/cerebrod.c (main): Update for function name change.

	* src/cerebrod/cerebrod_config.c (_config_load_dynamic_module,
	_cerebrod_config_module_setup): Remove calls to Lt_dlclose and
	Lt_dlexit, so config module is kept upon on exit.

	* src/libcerebro/cerebro_defs.h,
	src/libcerebro/cerebrod_heartbeat_protocol.h,
	src/libcerebro/cerebro_updown_protocol.h: New files.
	
	* src/cerebrod/: Re-work for new header files and variable renaming.

	* src/libcerebro/cerebro_marshalling.h,
	src/libcerebro/cerebro_marshalling.c: New files.

	* src/cerebrod/cerebrod_heartbeat.c: Re-worked for use of new library functions.

	* src/cerebrod/Makefile.am: Updated for new library.
	
2005-03-23  Albert Chu  <chu11@llnl.gov>

	Begin work on libcerebro

	* src/libcerebro/Makefile.am,
	src/libcerebro/cerebrod_config_module.h,
	src/libcerebro/cerebrod_clusterlist.h: New files.

	* configure.ac, src/Makefile.am: Updated for new files and directories.

	* src/libcommon/fd.c (fd_write_n): Remove warnings.

	* src/cerebrod/cerebrod_clusterlist.h: Remove useless headers.

	* src/cerebrod/cerebrod_clusterlist_utils.c: Fix header problems.

	* src/cerebrod/cerebrod_config.h,
	src/cerebrod/cerebrod_clusterlist.h: Removed definitions and
	declarations due to new ones in
	src/libcerebro/cerebrod_config_module.h and
	src/libcerebro/cerebrod_clusterlist.h.

	* src/cerebrod/cerebrod_config.c,
	src/cerebrod_config_gendersllnl.c
	src/cerebrod/cerebrod_clusterlist.c,